--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -188,6 +188,7 @@
     <Compile Include="DataModels\SQLite\SampleSourceCode.cs" />
     <Compile Include="DataModels\SQLite\SourceCode.cs" />
     <Compile Include="DataModels\SQLite\Enums\SourceCodeTitleScore.cs" />
+    <Compile Include="Enums\ClipboardOperation.cs" />
     <Compile Include="Enums\SavedCodeLoadingSource.cs" />
     <Compile Include="Enums\SourceCodeShareType.cs" />
     <Compile Include="Enums\UserGuideSection.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Helpers\Extensions\TextExtensions.cs" />
     <Compile Include="Helpers\Settings\AppSettingsKeys.cs" />
     <Compile Include="Helpers\Settings\AppSettingsManager.cs" />
+    <Compile Include="Helpers\WindowsAPIs\ClipboardHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\EmailHelper.cs" />
     <Compile Include="Helpers\Extensions\StringExtensions.cs" />
     <Compile Include="Helpers\Extensions\_IEnumerableExtensions.cs" />
@@ -209,6 +211,7 @@
     <Compile Include="Helpers\WindowsAPIs\TimelineManager.cs" />
     <Compile Include="Messages\Abstract\ValueChangedMessageBase.cs" />
     <Compile Include="Messages\Actions\DebugStatusChangedMessage.cs" />
+    <Compile Include="Messages\IDE\ClipboardOperationRequestMessage.cs" />
     <Compile Include="Messages\IDE\CodeSnippetSelectedMessage.cs" />
     <Compile Include="Messages\Requests\BackgroundExecutionInputRequestMessage.cs" />
     <Compile Include="Messages\Requests\IDEAutosaveTriggeredMessage.cs" />
@@ -330,6 +333,9 @@
     <Compile Include="UserControls\DataTemplates\SnippetsMenu\CodeSnippetTemplate.xaml.cs">
       <DependentUpon>CodeSnippetTemplate.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\DataTemplates\SnippetsMenu\ContextMenuIconButtonTemplate.xaml.cs">
+      <DependentUpon>ContextMenuIconButtonTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Flyouts\DevInfo\ChangelogViewFlyout.xaml.cs">
       <DependentUpon>ChangelogViewFlyout.xaml</DependentUpon>
     </Compile>
@@ -371,6 +377,9 @@
     </Compile>
     <Compile Include="UserControls\Flyouts\Settings\Sections\UISettingsSection.xaml.cs">
       <DependentUpon>UISettingsSection.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Flyouts\SnippetsMenu\FullCodeSnippetsBrowserFlyout.xaml.cs">
+      <DependentUpon>FullCodeSnippetsBrowserFlyout.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Flyouts\SnippetsMenu\TouchCodeSnippetsBrowserFlyout.xaml.cs">
       <DependentUpon>TouchCodeSnippetsBrowserFlyout.xaml</DependentUpon>
@@ -488,6 +497,7 @@
     <Compile Include="ViewModels\ConsoleViewModel.cs" />
     <Compile Include="ViewModels\FlyoutsViewModels\CodeSnippetsBrowserViewModel.cs" />
     <Compile Include="ViewModels\FlyoutsViewModels\ConsoleFullMemoryViewerControlViewModel.cs" />
+    <Compile Include="ViewModels\FlyoutsViewModels\CustomRichEditBoxContextMenuViewModel.cs" />
     <Compile Include="ViewModels\FlyoutsViewModels\IDERunResultFlyoutViewModel.cs" />
     <Compile Include="ViewModels\FlyoutsViewModels\Settings\SettingsJumpListViewModel.cs" />
     <Compile Include="ViewModels\FlyoutsViewModels\Settings\SettingsViewModel.cs" />
@@ -719,6 +729,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="UserControls\DataTemplates\SnippetsMenu\ContextMenuIconButtonTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\DataTemplates\UnicodeCharacterTemplate.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -792,6 +806,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Flyouts\Settings\Sections\UISettingsSection.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Flyouts\SnippetsMenu\FullCodeSnippetsBrowserFlyout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
