--- a/Brainf_ck-sharp.NET/Brainf_ck-sharp.NET.csproj
+++ b/Brainf_ck-sharp.NET/Brainf_ck-sharp.NET.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Brainf_ck_sharp.NET</RootNamespace>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.3" />
+  </ItemGroup>
 
 </Project>
