Fixed stack trace generation, minor code refactoring

--- a/Brainf_ck-sharp.Unit.Internals/Brainf_ck-sharp.Unit.Internals.csproj
+++ b/Brainf_ck-sharp.Unit.Internals/Brainf_ck-sharp.Unit.Internals.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Brainf_ck_sharp.Unit.Internals</RootNamespace>
-
     <IsPackable>false</IsPackable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
