Legacy library renamed

--- a/_legacy/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/_legacy/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -971,9 +971,9 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Brainf_ck-sharp\Brainf_ck-sharp.csproj">
+    <ProjectReference Include="..\Brainf_ck-sharp\Brainf_ckSharp.Legacy.csproj">
       <Project>{29c20cf8-6019-427b-9987-e6059ba657e4}</Project>
-      <Name>Brainf_ck-sharp</Name>
+      <Name>Brainf_ckSharp.Legacy</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
