--- a/_legacy/Brainf_ck-sharp/Brainf_ckSharp.Legacy.csproj
+++ b/_legacy/Brainf_ck-sharp/Brainf_ckSharp.Legacy.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
-    <RootNamespace>Brainf_ck_sharp</RootNamespace>
+    <RootNamespace>Brainf_ckSharp.Legacy</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
