Added shell command bar and buttons

--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -123,7 +123,6 @@
     </Compile>
     <Compile Include="Bindings\Functions\PivotSelectionFunctions.cs" />
     <Compile Include="Controls\Commands\AnimatedCommandBar.cs" />
-    <Compile Include="Controls\Commands\PriorityCommandBarButton.cs" />
     <Compile Include="Controls\Header\HeaderButton.cs" />
     <Compile Include="Controls\Header\HeaderPanel.xaml.cs">
       <DependentUpon>HeaderPanel.xaml</DependentUpon>
@@ -133,6 +132,7 @@
     </Compile>
     <Compile Include="Extensions\System.Collections.Generic\IEnumerableExtensions.cs" />
     <Compile Include="Helpers\UI\TitleBarHelper.cs" />
+    <Compile Include="MarkupExtensions\BooleanExtension.cs" />
     <Compile Include="MarkupExtensions\FontIconExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
