--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -122,7 +122,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Bindings\Functions\PivotSelectionFunctions.cs" />
-    <Compile Include="Controls\Commands\AnimatedCommandBar.cs" />
+    <Compile Include="Controls\Windows.UI.Xaml.Controls\AnimatedCommandBar.cs" />
     <Compile Include="Controls\Header\HeaderButton.cs" />
     <Compile Include="Controls\Header\HeaderPanel.xaml.cs">
       <DependentUpon>HeaderPanel.xaml</DependentUpon>
