--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -122,6 +122,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Bindings\Functions\PivotSelectionFunctions.cs" />
+    <Compile Include="Controls\Telerik.UI.Controls\ExpanderControl.cs" />
     <Compile Include="Controls\Windows.UI.Xaml.Controls\AnimatedCommandBar.cs" />
     <Compile Include="Controls\Header\HeaderButton.cs" />
     <Compile Include="Controls\Header\HeaderPanel.xaml.cs">
